--- a/ccpp-docs/site/index.html
+++ b/ccpp-docs/site/index.html
@@ -133,7 +133,7 @@
 <h2 id="vision">Vision</h2>
 <p><em>Provide and operate an on-premise cloud offering for the scientific community to supplement traditional HPC services and public cloud offerings while utilizing 2i2c to host a JupyterHub instance in the public cloud.</em></p>
 <h4 id="what-is-an-on-premise-cloud">What is an on-premise cloud?</h4>
-<p>NCAR | CISL runs Compute, Storage &amp; Network hardware in robust Data Centers at multiple organizational facilities. An on-premise cloud is offering users the ability to utilize those highly available organizationally supported compute resources for approved use cases. This includes access to routable network space and UCAR Domain Name Systems (DNS). Security standards set by the organization are These resources would be provided to supplement computing needs that aren't fulfilled by the HPC offering, public cloud, or what is available to you locally. </p>
+<p>NCAR | CISL runs Compute, Storage &amp; Network hardware in robust Data Centers at multiple organizational facilities. An on-premise cloud is offering users the ability to utilize those highly available organizationally supported compute resources for approved use cases. This includes access to routable network space and UCAR Domain Name Systems (DNS). Security standards set by the organization are implemented and controlled by administrators to make sure internal policies are being adhered to. These resources would be provided to supplement computing needs that aren't fulfilled by the HPC offering, public cloud, or what is available to you locally. </p>
 <h2 id="goals">Goals</h2>
 <ul>
 <li>Improve understanding of how scientific community might use and benefit from an on-prem cloud<ul>
@@ -201,5 +201,5 @@
 
 <!--
 MkDocs version : 1.4.2
-Build Date UTC : 2023-05-22 23:56:39.961808+00:00
+Build Date UTC : 2023-05-23 00:00:43.659200+00:00
 -->
