--- a/jupyter-docs/_templates/footer-menu.html
+++ b/jupyter-docs/_templates/footer-menu.html
@@ -1,54 +1,16 @@
-<div class="container-fluid footer-menu pt-4">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-9 col-sm-4 col-md-4 col-lg-3 footer-menu-col">
-          <h1>{{ _("About") }}</h1>
-          <ul class="list-unstyled">
-            <li>
-              <a href="https://www2.cisl.ucar.edu/about"
-                >{{ _("About CISL") }}</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="col-9 col-sm-4 col-md-4 col-lg-3 footer-menu-col">
-          <h1>{{ _("Give Feedback") }}</h1>
-          <ul class="list-unstyled">
-            <li>
-              <a href="mailto:cisl-cloud-pilot@ucar.edu">{{ _("Email us!") }}</a>
-            </li>
-            <li>
-              <a href="https://jira.ucar.edu/secure/RapidBoard.jspa?projectKey=CCPP">{{ _("View our Jira Kanban!") }}</a>
-            </li>
-            <li>
-              <a href="https://github.com/NCAR/cisl-cloud"
-                >{{ _("Join us on GitHub") }}</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="col-9 col-sm-4 col-md-4 col-lg-3 footer-menu-col">
-          <h1>{{ _("Access") }}</h1>
-          <ul class="list-unstyled">
-            <li>
-              <a href="https://jupyter.k8s.ucar.edu/"
-                >{{ _("Login to NCAR JupyterHub") }}</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://rancher.k8s.ucar.edu/"
-                >{{ _("Login to Rancher (k8s management)") }}</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://github.com/orgs/NCAR/teams/2i2c-cloud-users"
-                >{{ _("Request Access via GitHub Teams") }}</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
+<style>
+  @import url('https://fonts.googleapis.com/css?family=Poppins:400,600,700');
+</style>
+<div class="grid-x grid-padding-y footer-menu-tertiary">
+  <div class="cell text-center custom-footer">
+      <small>©  UCAR</small>
+          <a href="https://www.ucar.edu/privacy-notice" class="custom-footer-link">Privacy</a>
+          <a href="https://www.ucar.edu/cookie-other-tracking-technologies-notice" class="custom-footer-link">Cookies</a>
+          <a href="https://www.ucar.edu/terms-of-use" class="custom-footer-link">Terms of Use</a>
+          <a href="https://www.ucar.edu/notification-copyright-infringement-digital-millenium-copyright-act" class="custom-footer-link">Copyright Issues</a>
+          <a href="https://nsf.gov" class="custom-footer-link">Sponsored by NSF</a>
+          <a href="https://ncar.ucar.edu" class="custom-footer-link">NCAR Home</a>
+          <a href="https://www.ucar.edu" class="custom-footer-link">UCAR Home</a>
+      </ul>
   </div>
+</div>
